[package]
name = "staking-pool-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = { version = "4.0.0-pre.8", features = ["unstable"] }
near-contract-standards = "4.0.0-pre.8"
primitive-types = {version = "0.11.1", default-features = false}

[lib]
crate-type = ["cdylib"]
